--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="container">
       <div class="wrapper">
         <!-- Left Bar -->
-        <!-- <nav class="left_bar">
+        <nav class="left_bar" id="left_bar">
           <div class="banner">
             <img src="./assets/images/left_bar.svg" alt="Sales Score" />
             <button class="banner_btn">サポートサイト</button>
           </div>
-        </nav> -->
+        </nav>
         <div class="center">
           <!-- Header -->
           <header class="header">
@@ -52,7 +52,7 @@
           </header>
           <div class="main">
             <!-- Search -->
-            <form action="" class="search">
+            <div  class="search">
               <label for="" class="search-text">どんな事でお困りですか？</label>
               <div class="input-wrapper">
                 <i class="fa-solid fa-magnifying-glass input-icon"></i>
@@ -63,7 +63,7 @@
                 />
               </div>
               <input type="submit" value="検索" class="input-btn" />
-            </form>
+            </div>
             <!-- Topic 1 -->
             <div class="topic" style="margin-top: 48px" id="topic1"></div>
             <!-- Tag List 1-->
